--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
