--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
